# fastapi-di-viz

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
fastapi_di_viz/: app.py  utils.py
tests/: test_utils.py
tests/snapshots/test_utils/test_build_dependency_graph_sample_app/: build_dependency_graph_sample_app
tests/snapshots/test_utils/test_build_dependency_graph_single_route/: build_dependency_graph_single_route
tests/snapshots/test_utils/test_build_dependency_graph_with_security/: build_dependency_graph_with_security
tests/snapshots/test_utils/test_mermaid_from_dot_sample_app/: mermaid_from_dot_sample_app
